--- a/maji.css
+++ b/maji.css
@@ -6,9 +6,11 @@ body {
     font-family :Verdana,Geneva,sans-serief;
     margin-left : 20px;
     font-weight:normal;
+    line-height:1.6em;
 
 
 }
+
 
 
 h2,
