--- a/maji.css
+++ b/maji.css
@@ -1,30 +1,80 @@
-body {
-    background-color:black;
-    padding:960px
-    text-align : left;
-    color: pink;
-    font-family :Verdana,Geneva,sans-serief;
-    margin-left : 20px;
-    font-weight:normal;
-    line-height:1.6em;
+<!DOCTYPE html > 
 
+<html lang ="en">
+  
+  <head>
+      <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <title > Major Girmay </title>
+    <link rel="stylesheet" href="css/maji.css">
+    
+  </head>
+  <body>
+<h2> Major Girmay </h2>  
+ 
+  <p> <em> It is not over till i win <em> </p>
+    
+      <img src="C:\Users\laptop\Desktop\img\maji.jpg "alt ="my picture">
 
-}
+  <p> I am passionate ,dreamer and adventurous </P>
+  
+ <table>
+  <tr>
+  <th> Questions </th>
+  <th> Answer </th>
+  </tr>
+  
+  <tr>
+  <td> Birthday </td>
+   <td> May /13 </td>
+  </tr>
+  <tr>
+  <td> Favorite color </td>
+ <td> Black </td>
+ </tr>
+  <td> Favorite color </td>
+  <td> Ethiopian meals </td>
+  </tr>
+  
+  <tr>
+  <td> Pineapple on pizza :|</td>
+  <td> never tried before so go for it </td>
+    
+    <td>
+     
+      <input type="checkbox" id="yes" name="yes" value="yes" checked>
+                <label for="yes"> Yes</label><br>
+                <input type="checkbox" id="no" name="no" value="no">
+                <label for="no"> No</label><br>
+   </td>
+  </tr>
+  </table>
+  <br>
+  <h3> Hobbies </h3>
+     <ul>
+      <li> Reading <li>
+       <ul>
+           <li> The Alchemist </li>
+           <li>  Born crime  </li>
+            <li> You already have it </li>
+       </ul>
+      <li> travelling </li>
+       <li> Cooking </li>
+      </ul>
+      <h4>  You can always count on me when.. </h4>
+     <P><strong> If you need to talk personal experience ,consciousness ,history and culture if you facinated about it </strong></p>
+     
+      <h5> Funny Story</h5> 
+     <p> Teaching is not for sensitive souls. While reviewing future, past, and present tenses with my English class, I posed this question: “‘I am beautiful’ is what tense?” One student raised her hand. “Past tense. </p>
+     
+     <h6> TL;DR <h6>
+     <p> Mocking </P>
+      
+      <p> <a href=https://github.com/Gwen1985/markdown-to-html/> Gwen Ellegeest</a>|| Major Girmay || <a href=https://github.com/ezgihendrickx/markdown-to-html/blob/master/index.html /> Ezgi Hendrickx </a> </p>
+  
+  
+       </body>
+  
+       </html>
+     
 
-
-
-h2,
-h3,
-h4,
-h5,
-h6{
-    color: Balck;
-    font-family:Tahoma 
-    font-weight:800;
-    font-style:italic;
-    text-decoration:underline;
-    text-transform:uppercase;
-    letter-spacing:0.2em;
-    font-size: 16px;
-    padding:20px;
-    }
