--- a/maji.css
+++ b/maji.css
@@ -15,7 +15,7 @@
  
   <p> <em> It is not over till i win <em> </p>
     
-      <img src="C:\Users\laptop\Desktop\img\maji.jpg "alt ="my picture">
+      <img src="C:\Users\laptop\Desktop\img\maji.jpg ">
 
   <p> I am passionate ,dreamer and adventurous </P>
   
