--- a/maji.css
+++ b/maji.css
@@ -6,7 +6,42 @@
       <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0" >  
     <title > Major Girmay </title>
-    <link rel="stylesheet" href="css/maji.css">
+    <style>
+
+body {
+    background-color:black;
+    padding:960px
+    text-align : left;
+    color: pink;
+    font-family :Verdana,Geneva,sans-serief;
+    margin-left : 20px;
+    font-weight:normal;
+    line-hight:1.6em; 
+
+     }
+
+     
+
+
+h2,
+h3,
+h4,
+h5,
+h6{
+    color: Balck;
+    font-family:Tahoma 
+    font-weight:800;
+    font-style:italic;
+    text-decoration:underline;
+    text-transform:uppercase;
+    letter-spacing:0.2em;
+    font-size: 16px;
+    padding:20px;
+
+
+
+}
+</style>
     
   </head>
   <body>
