--- a/maji.css
+++ b/maji.css
@@ -9,37 +9,23 @@
     <style>
 
 body {
-    background-color:black;
-    padding:960px
-    text-align : left;
-    color: pink;
+    background-color:black; padding:960px
+    text-align : left; color: black;
     font-family :Verdana,Geneva,sans-serief;
-    margin-left : 20px;
-    font-weight:normal;
+    margin-left : 20px;font-weight:normal;
     line-hight:1.6em; 
-
-     }
-
-     
-
+}
 
 h2,
 h3,
 h4,
 h5,
 h6{
-    color: Balck;
-    font-family:Tahoma 
-    font-weight:800;
-    font-style:italic;
-    text-decoration:underline;
-    text-transform:uppercase;
-    letter-spacing:0.2em;
-    font-size: 16px;
+    color: pink;    font-family:Tahoma 
+    font-weight:800; font-style:italic;
+    text-decoration:underline; text-transform:uppercase;
+    letter-spacing:0.2em ;  font-size: 16px;
     padding:20px;
-
-
-
 }
 </style>
     
